@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.monarchinitiative.phenol</groupId>
     <artifactId>phenol</artifactId>
-    <version>2.0.0</version>
+    <version>2.0.1</version>
   </parent>
 
   <artifactId>phenol-io</artifactId>
@@ -23,18 +23,11 @@
        <groupId>org.geneontology.obographs</groupId>
        <artifactId>obographs-core</artifactId>
     </dependency>
+    <!-- We can drop the dependency after obographs-core updates the vulnerable snakeyaml 1.33 to >=2.0. -->
+    <dependency>
+      <groupId>org.yaml</groupId>
+      <artifactId>snakeyaml</artifactId>
+    </dependency>
   </dependencies>
-
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <argLine>--add-reads com.fasterxml.jackson.datatype.guava=ALL-UNNAMED </argLine>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
 
 </project>
